<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="150dp"
    android:background="@color/white" >

    <TextView
        android:id="@+id/tutorial_na_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/tutorial_na"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tutorial_na_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_below="@+id/tutorial_na_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal|center"
        android:text="@string/tutorial_na_desc"
        android:textSize="15sp" />

    <View
        android:layout_height="1dip"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@+id/tutorial_na_description"
        android:layout_marginTop="10dp"
        android:background="@color/silver" 
        android:layout_width="match_parent"/>

    <TextView
        android:id="@+id/tutorial_na_accept_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tutorial_na_description"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal|center"
        android:text="@string/accept"
        android:textColor="@color/blue"
        android:textSize="20sp" />

</RelativeLayout>