<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <View
        android:id="@+id/feedback_selected_view1"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/silver" />

    <ImageView
        android:id="@+id/feedback_selected_image1"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/content"
        android:src="@drawable/icon_feedback_selected" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="20dp"
        android:text="@string/feedback_selected1"
        android:textColor="@color/green"
        android:textSize="16sp" />

    <View
        android:id="@+id/feedback_selected_view2"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="50dp"
        android:background="@color/silver" />

    <ImageView
        android:id="@+id/feedback_selected_image2"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/content"
        android:src="@drawable/icon_feedback_selected" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="60dp"
        android:text="@string/feedback_selected2"
        android:textColor="@color/green"
        android:textSize="16sp" />

</RelativeLayout>