<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/info_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/lightgreen" >

        <TextView
            android:id="@+id/info_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal|center"
            android:text="name"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/creation_timestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/info_title"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/creation_timestamp"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/icon_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/creation_timestamp"
        android:layout_below="@+id/creation_timestamp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/content"
        android:src="@drawable/icon_date" />

    <TextView
        android:id="@+id/text_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/icon_date"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/icon_date"
        android:text="date"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/icon_hour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/icon_date"
        android:layout_below="@+id/icon_date"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/content"
        android:src="@drawable/icon_hour" />

    <TextView
        android:id="@+id/text_hour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/icon_hour"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/icon_hour"
        android:text="hour"
        android:textSize="16sp" />

    <View
        android:id="@+id/urn_line"
        android:layout_width="200dp"
        android:layout_height="1dip"
        android:layout_below="@+id/icon_hour"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/black" />

    <TextView
        android:id="@+id/text_urn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/icon_hour"
        android:layout_below="@+id/urn_line"
        android:layout_marginTop="27dp"
        android:text="@string/urn"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/text_urn_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_urn"
        android:layout_below="@+id/text_urn"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:text="urn value" />

</RelativeLayout>